-
Bug
-
Resolution: Done
-
P2: Important
-
5.0.0 Beta 1
-
None
-
Win7 + Qt5 beta 1
-
4b7dd71aa05570dbf4e7819555c831bd6a79c2d5
Firstly, I didn't set the samples of QSurfaceFormat to QQuickView.
Reference to the doc, the multisampling is default disable. http://qt-project.org/doc/qt-5.0/qsurfaceformat.html#samples
My sample is easy, just drag the rectangle by MouseArea.
I found there are two issue will cause the performance higher :
1. If the panel is wider (ex: 1400x900), the CPU rate is high than small area (360x360).
2. If mouse control be contained in the Rectangle component, the CPU is high than the component is Item.
Then I set the sample to 0 (Disable the multisampling). The CPU rate is lower.
My question is, if default is disable, why the performance has apparently different after setting ?
Thanks
| For Gerrit Dashboard: QTBUG-27600 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 37514,2 | Windows: Multisampling is disabled by default. | master | qt/qtbase | Status: MERGED | +2 | 0 |